[project]
name = "spine_items"
dynamic = ["version"]
authors = [{name = "Spine Project consortium", email = "spine_info@vtt.fi"}]
license = {text = "LGPL-3.0-or-later"}
description = "Spine project items"
keywords = ["energy system modelling", "workflow", "optimisation", "database"]
readme = {file = "README.md", content-type = "text/markdown"}
classifiers = [
	    "Programming Language :: Python :: 3",
	    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
	    "Operating System :: OS Independent",
]
requires-python = ">=3.8.1, <3.12"
dependencies = [
    "pyside6 >= 6.5.0, != 6.5.3, != 6.6.3",
    "pyodbc >=4.0",
    # v1.4 does not pass tests
    "sqlalchemy >=1.3, <1.4",
    "pygments >=2.8",
    "numpy >=1.20.2",
    "spinedb_api>=0.30.0",
    "spine_engine>=0.23.0",
    # "spinetoolbox >=0.6.18",
]

[project.urls]
Repository = "https://github.com/spine-tools/spine-items"

[build-system]
requires = ["setuptools>=64", "setuptools_scm[toml]>=6.2", "wheel", "build"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "spine_items/version.py"
version_scheme = "release-branch-semver"

[tool.setuptools]
zip-safe = false
include-package-data = true

[tool.setuptools.packages.find]
exclude = [
	"bin*",
	"fig*",
	"tests*",
]

[tool.coverage.run]
source = ["spine_items"]
branch = true

[tool.coverage.report]
ignore_errors = true

[tool.black]
line-length = 120
exclude = '\.git|ui|resources_icons_rc.py'
