[project]
name = "spine_items"
dynamic = ["version"]
authors = [{name = "Spine Project consortium", email = "spine_info@vtt.fi"}, {name = "contributors"}]
license = {text = "LGPL-3.0-or-later"}
description = "Spine project items"
keywords = ["energy system modelling", "workflow", "optimisation", "database"]
readme = {file = "README.md", content-type = "text/markdown"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
    "Operating System :: OS Independent",
]
requires-python = ">=3.10"
dependencies = [
    "spinedb_api>=0.35.0",
    "spine_engine>=0.26.0",
    # "spinetoolbox >=0.9.7",
]

[project.urls]
Repository = "https://github.com/spine-tools/spine-items"
Issues = "https://github.com/spine-tools/Spine-Toolbox/issues"
Changelog = "https://github.com/spine-tools/Spine-Toolbox/blob/master/CHANGELOG.md"

[build-system]
requires = ["setuptools>=64", "setuptools_scm[toml]>=6.2", "wheel", "build"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "spine_items/version.py"
version_scheme = "release-branch-semver"

[tool.setuptools]
zip-safe = false
include-package-data = true

[tool.setuptools.packages.find]
exclude = [
    "bin*",
    "fig*",
    "tests*",
]

[tool.coverage.run]
source = ["spine_items"]
branch = true

[tool.coverage.report]
ignore_errors = true

[tool.black]
line-length = 120
force-exclude = '\.git|ui|resources_icons_rc.py|version.py'

[tool.isort]
profile = "black"
lines_between_sections = 0
force_sort_within_sections = true
honor_case_in_force_sorted_sections = true
skip = [".git", "spine_items/resources_icons_rc.py", "spine_items/resources_logos_rc.py", "spinetoolbox/version.py"]
skip_glob = ["spine_items/ui/*", "spine_items/*/ui/*", "spine_items/version.py"]
line_length = 120
known_first_party = ["spine_engine", "spinedb_api", "spinetoolbox"]
