######################################################################################################################
# Copyright (C) 2021 Spine project consortium
# This file is part of Spine Items.
# Spine Items is free software: you can redistribute it and/or modify it under the terms of the GNU Lesser General
# Public License as published by the Free Software Foundation, either version 3 of the License, or (at your option)
# any later version. This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY;
# without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU Lesser General
# Public License for more details. You should have received a copy of the GNU Lesser General Public License along with
# this program. If not, see <http://www.gnu.org/licenses/>.
######################################################################################################################

[metadata]
name = spine_items
version = attr: spine_items.version.__version__
author = Spine Project consortium
author_email = spine_info@vtt.fi
license = LGPL-3.0-or-later
description = Spine project items
keywords =
url = https://github.com/Spine-project/spine-items
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)
    Operating System :: OS Independent

[options]
packages = find:
zip_safe = False
install_requires =
    pyside2 >= 5.14, < 5.15
    pyodbc >= 4.0, < 4.1
    sqlalchemy >= 1.3, < 1.4
    pygments >= 2.8, < 2.11
    numpy >= 1.20.2, < 1.22
    spinedb_api >= 0.14, < 0.15
    spine_engine >= 0.12, < 0.13
    spinetoolbox == 0.6.5
include_package_data = True
python_requires = >=3.7.1, <3.9

[options.packages.find]
exclude = tests, tests.*
