######################################################################################################################
# Copyright (C) 2021 Spine project consortium
# This file is part of Spine Items.
# Spine Items is free software: you can redistribute it and/or modify it under the terms of the GNU Lesser General
# Public License as published by the Free Software Foundation, either version 3 of the License, or (at your option)
# any later version. This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY;
# without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU Lesser General
# Public License for more details. You should have received a copy of the GNU Lesser General Public License along with
# this program. If not, see <http://www.gnu.org/licenses/>.
######################################################################################################################

[metadata]
name = spine_items
version = attr: spine_items.version.__version__
author = Spine Project consortium
author_email = spine_info@vtt.fi
license = LGPL-3.0-or-later
description = Spine project items
keywords =
url = https://github.com/spine-tools/spine-items
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)
    Operating System :: OS Independent

[options]
packages = find:
zip_safe = False
install_requires =
    pyside2 >= 5.15
    pyodbc >=4.0
    sqlalchemy >=1.3, <1.4  # v1.4 does not pass tests
    pygments >=2.8
    numpy >=1.20.2  # v1.22 requires Python 3.8 or later
    spinedb_api >=0.24.0
    spine_engine >=0.19.0
    spinetoolbox >=0.6.15
include_package_data = True
python_requires = >=3.7.1, <3.11, != 3.8.0

[options.packages.find]
exclude = tests, tests.*

[coverage:run]
source = spine_items
branch = True

[coverage:report]
ignore_errors = True
